src/test/deca/codegen/valid/SansObjet/Print-UnaryMinus-float.deca
// Description:
//    Printing a unary minus applied to a float variable
//
// Results:
//     -1.0
//
// Historique:
//    cree le 14/01/2022

{
    float x ;
    x = 1.0 ;
    print( -x ) ;
}
