src/test/deca/codegen/invalid/SansObjet/Div-float-ZeroFloatLiteral.deca
// Description:
//    Division of an float by a zero float literal
//
// Results:
//     Error: division by zero
//
// Historique:
//    cree le 13/01/2022

{
    float x = 5 / 0.0;
}
